feat(core): major refactor & feature expansion of BarterBarrels plugin
This commit introduces a large-scale update touching multiple areas of the
plugin. Changes include code reorganization, GUI enhancements, improved
data handling, and new player-facing features. The goal was to streamline
core systems, improve maintainability, and add more polish to the user
experience.

Key changes:
- GUI:
  • Reworked Catalogue and Directory UIs with InventoryFramework support.
  • Fixed inconsistent GUI titles and improved gradient formatting.
  • Added paginated browsing and consistent button layouts.
  • Improved owner directory rendering with player heads.

- Data & Logic:
  • Introduced better tracking for shop locations and owners.
  • Fixed distance-check errors when interacting with stores across worlds.
  • Improved PlayerDataStorage to handle async vs sync saving safely.
  • Cleaned up redundant modifiers and unused code.

- Resource Pack & Flags:
  • Integrated custom flag emoji support with optional resource pack.
  • Added PlaceholderAPI hooks for both Unicode and bitmap flag modes.
  • Implemented graceful fallbacks for Bedrock players without packs.

- Compatibility:
  • Improved support for BungeeCord/Velocity proxies with IP forwarding.
  • Resolved Bedrock head-caching inconsistencies with profile properties.
  • General codebase cleanup for better Spigot/Paper compatibility.

- Configuration:
  • Updated `plugin.yml` to remove unused commands and permissions.
  • Extended config options for toggles, formatting, and debug logging.

- Misc:
  • Fixed several UI/UX polishing issues (title duplication, muted lore text).
  • Added detailed inline comments to utility classes for maintainability.

This is a foundational refactor that sets up future features and bugfixes.

(cherry picked from commit 19adb0d9f3846a07be2ce629f079d6bc47bc54d5)